--- a/templates/add_project.html
+++ b/templates/add_project.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %} {% from 'bootstrap5/form.html' import render_form %}
+{% extends 'base.html' %} {% from 'bootstrap/form.html' import render_form %}
 {% block title %} Add project {% endblock %}
 {%block content %}
 
