--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -1,4 +1,5 @@
-{% extends 'base.html' %} {% from 'bootstrap5/form.html' import render_form %}
+{% extends 'base.html' %} {% from "bootstrap5/form.html" import render_form %}
+
 {% block title %} Contact Me {% endblock %}
 {%block content %}
 <h1>Contact Me</h1>
