--- a/application/home/templates/base.html
+++ b/application/home/templates/base.html
@@ -9,6 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="https://cdn.ckeditor.com/ckeditor5/46.0.0/ckeditor5.css" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap"
           rel="stylesheet">
@@ -35,6 +36,7 @@
                                         href="{{ url_for('home_bp.home') }}">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('home_bp.about_me') }}">About me</a></li>
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('home_bp.contact_me') }}">Contact me</a></li>
+                <li class="nav-item"><a class="nav-link" href="{{ url_for('notes_bp.create_notes') }}">Notes</a></li>
                 {% if current_user.is_authenticated %}
                 <li class="nav-item"><a class="nav-link" href="{{ url_for('auth_bp.logout') }}"> Logout</a></li>
                 {% else %}
@@ -131,5 +133,14 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
+<script>
+  setTimeout(() => {
+    document.querySelectorAll('.flash').forEach(el => {
+      el.classList.add('hide');
+      setTimeout(() => el.remove(), 500);
+    });
+  }, 3000); // 3 seconds
+</script>
+
 </body>
 </html>
