--- a/application/home/templates/home.html
+++ b/application/home/templates/home.html
@@ -20,6 +20,17 @@ height: 200px;
 {% endblock %}
 
 {% block content %}
+<!-- Adding Flash message here -->
+      <div class="flash-messages">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <p class="flash flash-{{ category }}">{{ message }}</p>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+</div>
+
 <div class="px-4 py-5 my-5 text-center"><img class="d-block mx-auto mb-4 person_pic"
                                              src="{{ url_for('home_bp.static', filename = 'images/IMG_4991.jpeg') }}" alt="" width="100"
                                              height="100">
