--- a/application/projects/templates/projects.html
+++ b/application/projects/templates/projects.html
@@ -95,6 +95,25 @@
     </div>
 </header>
 <main>
+    <!-- Pagination controls -->
+{% macro render_pagination(pagination, endpoint) %}
+  <div class="page-items">
+    {{ pagination.first }} - {{ pagination.last }} of {{ pagination.total }}
+  </div>
+  <div class=pagination>
+    {% for page in pagination.iter_pages() %}
+      {% if page %}
+        {% if page != pagination.page %}
+          <a href="{{ url_for('projects_bp.projects', page=page) }}">{{ page }}</a>
+        {% else %}
+          <strong>{{ page }}</strong>
+        {% endif %}
+      {% else %}
+        <span class=ellipsis>…</span>
+      {% endif %}
+    {% endfor %}
+  </div>
+{% endmacro %}
     <section class="py-5 text-center container">
         <div class="row py-lg-5">
             <div class="col-lg-6 col-md-8 mx-auto"><h1 class="fw-light"><font dir="auto"
@@ -111,7 +130,7 @@
     <div class="album py-5 bg-body-tertiary">
         <div class="container">
             <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-                {% for project in project_data %}
+                {% for project in page.items %}
                 <div class="col">
                     <div class="card shadow-sm">
                         <img src="{{ url_for('projects_bp.static', filename='images/'+project.image) }}" class = 'card-img-top' alt="">
@@ -152,6 +171,9 @@
             </div>
         </div>
     </div>
+
+    {{ render_pagination(page, 'projects_bp.projects') }}
+
 </main>
 
 <footer class="text-body-secondary py-5">
