--- a/application/auth/templates/login.html
+++ b/application/auth/templates/login.html
@@ -2,6 +2,17 @@
 {% block title %} Login {% endblock %}
 {% block content %}
 
+<!-- Adding Flash message here -->
+      <div class="flash-messages">
+  {% with messages = get_flashed_messages(with_categories=true) %}
+    {% if messages %}
+      {% for category, message in messages %}
+        <p class="flash flash-{{ category }}">{{ message }}</p>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+</div>
+
 <form action="/login" method="POST">
         <label for="username">Username:</label>
         <input type="text" name="username" required />
